# telos

./: MANIFEST.in  README.md  README_KR.md  install.sh  pyproject.toml
.claude/: CLAUDE.md  SPEC.template.md  settings.json
.claude/agents/: spec-evaluator.md
.claude/scripts/: ambiguity_score.py  spec_gate.py
.claude/skills/eval/: SKILL.md
.claude/skills/impl/: SKILL.md
.claude/skills/spec/: SKILL.md
.github/workflows/: ci.yml  publish.yml
kits/claude-code/: install.sh
kits/claude-code/.claude/: CLAUDE.md
kits/claude-code/.claude/agents/: spec-ambiguity-evaluator.md
kits/claude-code/.claude/skills/spec/: SKILL.md
kits/codex/: install.sh
kits/codex/plugins/telos/.codex-plugin/: plugin.json
kits/codex/plugins/telos/scripts/: ambiguity_score.py  spec_gate.py
kits/codex/plugins/telos/skills/impl/: SKILL.md
kits/codex/plugins/telos/skills/spec/: SKILL.md
kits/codex/plugins/telos/skills/spec/assets/: SPEC.template.md
scripts/: check_release_versions.py  check_wheel.py
src/telos_kit/: __init__.py  cli.py  installers.py  kit_versions.json  update_status.py
src/telos_kit/resources/claude-marketplace/.claude-plugin/: marketplace.json
src/telos_kit/resources/claude-marketplace/plugins/telos/.claude-plugin/: plugin.json
src/telos_kit/resources/codex/telos/.codex-plugin/: plugin.json
src/telos_kit/resources/codex/telos/hooks/: hooks.json
src/telos_kit/resources/codex/telos/scripts/: spec_gate.py
tests/: test_cli.py  test_gates.py  test_installers.py  test_update_status.py  test_versions.py
(+13 files in other folders)
